Refactor run evidential

--- a/run_single_experiment.ipynb
+++ b/run_single_experiment.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f421d5a4",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "603a5df7",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'training': False, 'save_probabilities': False, 'loadInference': False, 'addPastDeforestationInput': True, 'inference_times': 10, 'removePolygons': True, 'uncertainty_method': 'pred_entropy', 'classes_mode': False, 'learning_rate': 0.0001, 'site': 'PA', 'training_date': 'current'}\n"
+      "{'training': False, 'inferring': True, 'site': 'PA', 'training_date': 'current', 'mode': 'ensemble', 'save_probabilities': False, 'loadInference': False, 'addPastDeforestationInput': True, 'removePolygons': True, 'uncertainty_method': 'pred_entropy', 'classes_mode': False, 'learning_rate': 0.0001, 'plotLandsat': False, 'plotPOI': False, 'inference_times': 10, 'training_times': 10}\n"
      ]
     },
     {
@@ -91,7 +91,7 @@
     "\t\"inferring\": True,\n",
     "\t\"site\": \"PA\",\n",
     "\t\"training_date\": \"current\", # values: earlier, current\n",
-    "\t\"mode\": \"mcd\", # values: mcd, single_run, ensemble\n",
+    "\t\"mode\": \"ensemble\", # values: mcd, single_run, ensemble\n",
     "\t\"save_probabilities\": False,\n",
     "\t\"loadInference\": False,\n",
     "\t\"addPastDeforestationInput\": True,\n",
@@ -104,9 +104,6 @@
     "\n",
     "}\n",
     "\n",
-    "\n",
-    "config['training'] = False\n",
-    "\n",
     "if config['mode'] == 'mcd':\n",
     "\ttrainerClass = TrainerMCDropout\n",
     "\tconfig['inference_times'] = 10\n",
@@ -115,6 +112,7 @@
     "\ttrainerClass = TrainerSingleRun\n",
     "\tconfig['inference_times'] = 1\n",
     "\tconfig['training_times'] = 1\n",
+    "\tconfig['uncertainty_method'] = 'pred_entropy_single'\n",
     "elif config['mode'] == 'ensemble':\n",
     "\ttrainerClass = TrainerEnsemble\n",
     "\tconfig['inference_times'] = 10\n",
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "48f4c409",
    "metadata": {},
    "outputs": [
@@ -188,7 +186,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "55da0bd1",
    "metadata": {},
    "outputs": [],
@@ -210,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a5a8c279",
    "metadata": {},
    "outputs": [],
@@ -220,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "64080745",
    "metadata": {},
    "outputs": [
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4819ba4f",
    "metadata": {},
    "outputs": [
@@ -340,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "13437081",
    "metadata": {},
    "outputs": [
@@ -350,7 +348,7 @@
        "dtype('uint8')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1d0c9f6f",
    "metadata": {},
    "outputs": [],
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "31bb7ccf",
    "metadata": {},
    "outputs": [
@@ -402,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "11f75fbd",
    "metadata": {},
    "outputs": [
@@ -417,7 +415,7 @@
        "         38957434], dtype=int64))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "2632b8f2",
    "metadata": {},
    "outputs": [
@@ -454,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "aa7abdb5",
    "metadata": {},
    "outputs": [
@@ -474,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "e6c5f2a8",
    "metadata": {},
    "outputs": [
@@ -495,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "45271c3f",
    "metadata": {},
    "outputs": [],
@@ -508,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "4b985b62",
    "metadata": {},
    "outputs": [],
@@ -519,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "f83b95b7",
    "metadata": {},
    "outputs": [],
@@ -530,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "33f6c9bc",
    "metadata": {},
    "outputs": [],
@@ -541,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "ee6b749c",
    "metadata": {},
    "outputs": [],
@@ -555,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "261bb41d",
    "metadata": {},
    "outputs": [],
@@ -566,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "c33d2f80",
    "metadata": {},
    "outputs": [],
@@ -577,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "76199f57",
    "metadata": {},
    "outputs": [],
@@ -588,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "819ce5e4",
    "metadata": {},
    "outputs": [],
@@ -599,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "60e0886b",
    "metadata": {},
    "outputs": [],
@@ -611,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "14ab395d",
    "metadata": {},
    "outputs": [
@@ -621,7 +619,7 @@
        "'\\ncount, unique = np.unique(label_mask[mask_amazon_ts == 1], return_counts=True)\\nprint(count, unique)\\nprint(unique[1]/unique[0])\\n'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "e5c8c29f",
    "metadata": {},
    "outputs": [
@@ -646,7 +644,7 @@
        "'\\ncount, unique = np.unique(label_mask[mask_tr_val == 1], return_counts=True)\\nprint(count, unique)\\nprint(unique[1]/unique[0])\\n'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "17b18159",
    "metadata": {},
    "outputs": [],
@@ -673,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "aaa4db72",
    "metadata": {},
    "outputs": [],
@@ -685,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "7594ff2f",
    "metadata": {},
    "outputs": [],
@@ -698,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "465ded79",
    "metadata": {},
    "outputs": [],
@@ -711,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "9808000d",
    "metadata": {},
    "outputs": [],
@@ -722,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "2ab5378e",
    "metadata": {},
    "outputs": [],
@@ -733,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "ff8653a6",
    "metadata": {},
    "outputs": [],
@@ -744,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "a87b4504",
    "metadata": {},
    "outputs": [],
@@ -755,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "fd440109",
    "metadata": {},
    "outputs": [],
@@ -766,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "6630ce82",
    "metadata": {},
    "outputs": [],
@@ -777,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "bb658bac",
    "metadata": {},
    "outputs": [],
@@ -788,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "71bc74b3",
    "metadata": {},
    "outputs": [],
@@ -820,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "ddccb7fa",
    "metadata": {},
    "outputs": [
@@ -830,7 +828,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "52695380",
    "metadata": {},
    "outputs": [],
@@ -854,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "5af18c7b",
    "metadata": {},
    "outputs": [
@@ -864,7 +862,7 @@
        "(17730, 9200, 21)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "58071829",
    "metadata": {},
    "outputs": [
@@ -893,32 +891,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "0e741522",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ic| self.path_models+ '/' + self.method +'_'+str(0)+'.h5': 'D:/Jorge/datasets/deforestation/experiments/PA/exp0/models/resunet_0.h5'\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropout training mode: True\n",
       "time:  0\n",
-      "time:  1\n",
-      "time:  2\n",
-      "time:  3\n",
-      "time:  4\n",
-      "time:  5\n",
-      "time:  6\n",
-      "time:  7\n",
-      "time:  8\n",
-      "time:  9\n"
+      "time:  1\n"
      ]
     }
    ],
@@ -928,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "bc025ba8",
    "metadata": {},
    "outputs": [],
@@ -938,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "9c648ec4",
    "metadata": {},
    "outputs": [
@@ -959,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "2cbd5599",
    "metadata": {},
    "outputs": [
@@ -987,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "7d9bc343",
    "metadata": {},
    "outputs": [
@@ -1008,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "8205fe08",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "282f1857",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "1ac541be",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "1316e0b7",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "829ebd91",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "43b042e9",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "f8304782",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "d0791592",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "12049854",
    "metadata": {},
    "outputs": [
@@ -1172,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "829f8c5c",
    "metadata": {},
    "outputs": [
@@ -1190,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "1c210ca2",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "f08ba286",
    "metadata": {},
    "outputs": [
@@ -1230,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "788c3ff7",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "d6df1712",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "b1ff5935",
    "metadata": {},
    "outputs": [
@@ -1295,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "fc22d654",
    "metadata": {},
    "outputs": [],
@@ -1305,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "5b5ced1c",
    "metadata": {},
    "outputs": [
@@ -1332,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "8baa3e9d",
    "metadata": {},
    "outputs": [
@@ -1351,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "19b6c038",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "2b20a310",
    "metadata": {},
    "outputs": [
@@ -1389,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "c9ac8bda",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "2c23d6d0",
    "metadata": {},
    "outputs": [],
@@ -1425,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "370f4b62",
    "metadata": {},
    "outputs": [
@@ -1512,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "91c76d30",
    "metadata": {},
    "outputs": [
@@ -1530,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "999185ec",
    "metadata": {},
    "outputs": [
@@ -1548,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "3a214ff1",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "d3c0695f",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "521f7b4c",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "250d286b",
    "metadata": {},
    "outputs": [],
@@ -1636,7 +1618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "c9fdc869",
    "metadata": {},
    "outputs": [
@@ -1657,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "f8addb21",
    "metadata": {},
    "outputs": [
@@ -1702,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "00d9ee82",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "e5dca333",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "8d5694f4",
    "metadata": {},
    "outputs": [
@@ -1859,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "ca3db635",
    "metadata": {},
    "outputs": [
@@ -1918,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "709550a9",
    "metadata": {},
    "outputs": [
@@ -1938,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "435ac3bb",
    "metadata": {},
    "outputs": [
@@ -2052,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "a4674338",
    "metadata": {},
    "outputs": [
@@ -2494,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "1df6d430",
    "metadata": {},
    "outputs": [
@@ -2645,7 +2627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "d238c530",
    "metadata": {},
    "outputs": [],
@@ -2655,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "a71fa7e8",
    "metadata": {},
    "outputs": [
@@ -2684,7 +2666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "b6e0ab44",
    "metadata": {},
    "outputs": [
@@ -3003,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "104f8405",
    "metadata": {},
    "outputs": [
