Add MS site. Refactor run single experiment

--- a/run_multiple_experiments.ipynb
+++ b/run_multiple_experiments.ipynb
@@ -112,7 +112,8 @@
     "\telse:\n",
     "\t\tdates = [2018, 2019]\n",
     "\n",
-    "\tdataset = PAMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\tdataset = PAMultipleDates(config = config,\n",
+    "\t\tdates = dates, # dates = [2016,2017,2018,2019]\n",
     "\t\taddPastDeforestationInput = True,\n",
     "\t\tborderBuffer = 2)\n",
     "\n",
@@ -145,7 +146,8 @@
     "\telse:\n",
     "\t\tdates = [2019, 2020]\n",
     "\n",
-    "\tdataset = MTMultipleDates(dates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\tdataset = MTMultipleDates(config = config,\n",
+    "\t\tdates = dates, # dates = [2016,2017,2018,2019]\n",
     "\t\taddPastDeforestationInput = True,\n",
     "\t\tborderBuffer = 2)\t\n",
     "\tif config['mode'] == 'evidential':\t\n",
