Add evidential2 code

--- a/run_multiple_experiments.ipynb
+++ b/run_multiple_experiments.ipynb
@@ -33,15 +33,15 @@
     "from src import training_generator as generator\n",
     "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
     "\n",
-    "from src.trainer.evidential import TrainerEvidential\n",
-    "from src.trainer.multioutput import TrainerMCDropout, TrainerSingleRun\n",
+    "from src.manager.evidential import ManagerEvidential\n",
+    "from src.manager.multioutput import ManagerMCDropout, ManagerSingleRun\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "import cv2\n",
     "from src import metrics as _metric\n",
     "import json\n",
     "import pickle \n",
-    "import src.trainer.evidential as evidential\n",
+    "import src.manager.evidential as evidential\n",
     "from src.Logger import Logger\n",
     "import pdb\n"
    ]
@@ -195,7 +195,7 @@
     "    config[\"inference_times\"] = 1\n",
     "    config['Uncertainty']['annealing_step'] = 10*375\n",
     "    config['evidence_function'] = evidential.relu_evidence\n",
-    "    trainer_class = TrainerEvidential\n",
+    "    manager_class = ManagerEvidential\n",
     "    config['uncertainty_method'] = \"evidential\"\n",
     "    config['classes_mode'] = None\n",
     "    config['evidence_function']\n",
@@ -211,13 +211,13 @@
     "\n",
     "if config['mode'] == 'mcd':\n",
     "    config[\"inference_times\"] = 10\n",
-    "    trainer_class = TrainerMCDropout\n",
+    "    manager_class = ManagerMCDropout\n",
     "    config['uncertainty_method'] = \"pred_entropy\"\n",
     "    config['classes_mode'] = False\n",
     "\n",
     "elif config['mode'] == 'single_run':\n",
     "    config[\"inference_times\"] = 1\n",
-    "    trainer_class = TrainerSingleRun\n",
+    "    manager_class = ManagerSingleRun\n",
     "    config['uncertainty_method'] = \"pred_entropy_single\"\n",
     "    config['classes_mode'] = False\n",
     "\n"
@@ -268,19 +268,19 @@
     "\n",
     "            print(\"Beginning run number {}\".format(idx))\n",
     "            logger = Logger()\n",
-    "            trainer = trainer_class(config, dataset, patchesHandler, logger)\n",
-    "            print(\"trainer.config['dropout_training']\", trainer.config['dropout_training'])\n",
-    "            trainer.defineExperiment(exp) # fixed\n",
-    "            trainer.defineRepetitionId(idx) # varying from 0 to 10\n",
+    "            manager = manager_class(config, dataset, patchesHandler, logger)\n",
+    "            print(\"manager.config['dropout_training']\", manager.config['dropout_training'])\n",
+    "            manager.defineExperiment(exp) # fixed\n",
+    "            manager.defineRepetitionId(idx) # varying from 0 to 10\n",
     "            \n",
-    "            trainer.setExperimentPath()\n",
-    "            trainer.createLogFolders()\n",
+    "            manager.setExperimentPath()\n",
+    "            manager.createLogFolders()\n",
     "\n",
-    "            trainer.loadDataset()\n",
+    "            manager.loadDataset()\n",
     "\n",
     "            # %%\n",
     "            if config[\"training\"] == True:\n",
-    "                trainer.run()\n",
+    "                manager.run()\n",
     "            idx += 1\n",
     "            print(\"Grid execution idx: {}\".format(idx))            \n",
     "        except Exception as e: \n",
@@ -362,7 +362,7 @@
     }
    ],
    "source": [
-    "trainer_class"
+    "manager_class"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repetition_ids = trainer_class(config, dataset, patchesHandler, logger).get_repetition_ids(exp)  \n",
+    "repetition_ids = manager_class(config, dataset, patchesHandler, logger).get_repetition_ids(exp)  \n",
     "repetition_n = len(repetition_ids)\n",
     "print(\"repetition_ids {}, repetition_n {}\".format(repetition_ids, repetition_n))\n"
    ]
@@ -2620,23 +2620,23 @@
     "\n",
     "            print(\"Beginning run number {}\".format(idx))\n",
     "            logger = Logger()\n",
-    "            trainer = trainer_class(config, dataset, patchesHandler, logger)\n",
-    "            print(\"trainer.config\", trainer.config)\n",
+    "            manager = manager_class(config, dataset, patchesHandler, logger)\n",
+    "            print(\"manager.config\", manager.config)\n",
     "\n",
-    "            trainer.defineExperiment(exp) # fixed\n",
-    "            trainer.defineRepetitionId(idx) # varying from 0 to 10\n",
-    "            trainer.setExperimentPath()\n",
-    "            trainer.createLogFolders()\n",
+    "            manager.defineExperiment(exp) # fixed\n",
+    "            manager.defineRepetitionId(idx) # varying from 0 to 10\n",
+    "            manager.setExperimentPath()\n",
+    "            manager.createLogFolders()\n",
     "\n",
-    "            trainer.loadDataset()\n",
+    "            manager.loadDataset()\n",
     "\n",
     "            # %%\n",
-    "            result = trainer.run_predictor()\n",
+    "            result = manager.run_predictor()\n",
     "            print(\"Result idx {}: {}\".format(idx, result))\n",
     "            results.append(result)\n",
     "\n",
     "\n",
-    "            with open(trainer.default_log_name, 'wb') as f:\n",
+    "            with open(manager.default_log_name, 'wb') as f:\n",
     "                pickle.dump(results, f)\n",
     "            print(\"Grid execution idx: {}\".format(idx))\n",
     "            idx += 1\n",
@@ -2762,7 +2762,7 @@
     }
    ],
    "source": [
-    "trainer.f1"
+    "manager.f1"
    ]
   },
   {
@@ -2780,7 +2780,7 @@
     }
    ],
    "source": [
-    "print(trainer.f1)"
+    "print(manager.f1)"
    ]
   }
  ],
