Classes mode 3 False didnt work ok... go back to prev

--- a/run_multiple_experiments.ipynb
+++ b/run_multiple_experiments.ipynb
@@ -18,20 +18,27 @@
    "execution_count": 2,
    "id": "123e793c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensorflow ver. 2.6.0\n"
+     ]
+    }
+   ],
    "source": [
     "from icecream import ic\n",
     "\n",
     "import numpy as np\n",
     "from src.dataset import (\n",
-    "    MultipleDates,\n",
-    "    PA, PADistanceMap, PAMultipleDates,\n",
+    "    MultipleDates, PAMultipleDates,\n",
     "    MTMultipleDates\n",
     ")\n",
     "\n",
     "# from src.dataset_legacy import MTDeforestationTime\n",
     "from src import training_generator as generator\n",
-    "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential\n",
+    "from src.patchesHandler import PatchesHandler, PatchesHandlerMultipleDates, PatchesHandlerEvidential2\n",
     "\n",
     "from src.manager.evidential import ManagerEvidential\n",
     "from src.manager.multioutput import ManagerMCDropout, ManagerSingleRun\n",
@@ -56,19 +63,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mode: single_run. Site: PA. Training: False. Training date: current\n",
-      "{'training': False, 'inferring': True, 'site': 'PA', 'training_date': 'current', 'mode': 'single_run', 'learning_rate': 0.0001, 'weights': [0.1, 0.9, 0], 'save_probabilities': False, 'loadInference': False, 'addPastDeforestationInput': True, 'Uncertainty': {}, 'uncertainty_method': 'pred_entropy'}\n"
+      "Mode: evidential2. Site: PA. Training: True. Training date: current\n",
+      "{'training': True, 'inferring': True, 'site': 'PA', 'training_date': 'current', 'mode': 'evidential2', 'training_times': 10, 'learning_rate': 0.0001, 'weights': [0.1, 0.9, 0], 'save_probabilities': False, 'loadInference': False, 'addPastDeforestationInput': True, 'Uncertainty': {}, 'uncertainty_method': 'evidential2'}\n"
      ]
     }
    ],
    "source": [
     "\n",
     "config = {\n",
-    "    \"training\": False,\n",
+    "    \"training\": True,\n",
     "    \"inferring\": True,\n",
     "    \"site\" : 'PA',\n",
     "    \"training_date\": \"current\", # values: earlier, current\n",
-    "    \"mode\" : 'single_run', # values: mcd, single_run, ensemble, evidential\n",
+    "    \"mode\" : 'evidential2', # values: mcd, single_run, ensemble, evidential2\n",
     "    \"training_times\": 10,\n",
     "    \"learning_rate\": 1e-4,\n",
     "    \"weights\": [0.1, 0.9, 0],\n",
@@ -76,7 +83,7 @@
     "    \"loadInference\": False,\n",
     "    \"addPastDeforestationInput\": True,\n",
     "    \"Uncertainty\": {},\n",
-    "    \"uncertainty_method\": \"pred_entropy\", # values: pred_entropy, pred_variance, MI, KL\n",
+    "    \"uncertainty_method\": \"evidential2\", # values: pred_entropy, pred_variance, MI, KL\n",
     "    }\n",
     "print(\"Mode: {}. Site: {}. Training: {}. Training date: {}\".format(\n",
     "    config['mode'], config['site'], config['training'], config['training_date']))\n",
@@ -95,9 +102,7 @@
      "text": [
       "ic| list(self.date_ids): [0]\n",
       "ic| self.image_channels: [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]]\n",
-      "ic| dates: [2018, 2019]\n",
-      "ic| self.input_image_shape: 21\n",
-      "ic| self.dataset.image_channels: [[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]]\n"
+      "ic| dates: [2018, 2019]\n"
      ]
     }
    ],
@@ -105,81 +110,52 @@
     "\n",
     "\n",
     "#dates = [2018, 2019]\n",
-    "\n",
-    "if config['site'] == 'PA':\n",
-    "\tif config['training_date'] == \"earlier\":\n",
-    "\t\tdates = [2017, 2018]\n",
-    "\telse:\n",
-    "\t\tdates = [2018, 2019]\n",
-    "\n",
-    "\tdataset = PAMultipleDates(config = config,\n",
-    "\t\tdates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\t\taddPastDeforestationInput = True,\n",
-    "\t\tborderBuffer = 2)\n",
-    "\n",
-    "\n",
-    "\tif config['mode'] == 'ensemble':\n",
-    "\t\tif config['training'] == True:\n",
-    "\t\t\tconfig['mode'] = 'single_run'\n",
+    "if config['training'] == False:\n",
+    "\tif config['site'] == 'PA':\n",
+    "\t\tif config['training_date'] == \"earlier\":\n",
+    "\t\t\tdates = [2017, 2018]\n",
     "\t\telse:\n",
-    "\t\t\tsys.exit(\"Ensure that training is True for ensemble mode. Use infer_ensemble.ipynb for inference.\")\n",
+    "\t\t\tdates = [2018, 2019]\n",
     "\n",
-    "\tif config['mode'] == 'mcd' or config['mode'] == 'single_run': # MCD will do 10 inference on each of the 10 repetitions = 100 runs\n",
-    "\t\tif config['training_date'] == 'current': exp = 0\n",
-    "\t\t\t# exp_ids = [103, 104, 105, 106, 107, 118, 119, 120, 121, 122]\n",
-    "\t\t\t\n",
-    "\t\telif config['training_date'] == 'earlier': exp = 1\n",
-    "\t\t\t# exp_ids = [123, 124, 125, 126, 127, 128, 129, 131, 1122, 1121]\n",
-    "\t\t\t\n",
-    "\tif config['mode'] == 'evidential':\t\n",
-    "\t\t#exp_id_base = 148\n",
-    "\t\t# exp_id_base = 155\n",
-    "\t\t# exp_id_base = 194\n",
-    "\t\t# exp_id_base = 198\n",
-    "\t\t\n",
-    "\t\tif config['training_date'] == 'current': exp = 4; repetition_id = 0\n",
-    "\t\telif config['training_date'] == 'earlier': exp = 6; repetition_id = 0\n",
-    "\t\t# exp_id_base = 224 if config['training_date'] == 'earlier' else 214\n",
-    "else:\n",
-    "\tif config['training_date'] == \"earlier\":\n",
-    "\t\tdates = [2018, 2019]\n",
+    "\t\tdataset = PAMultipleDates(config = config,\n",
+    "\t\t\tdates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\t\taddPastDeforestationInput = True,\n",
+    "\t\t\tborderBuffer = 2)\n",
+    "\n",
+    "\n",
+    "\t\tif config['mode'] == 'ensemble':\n",
+    "\t\t\tif config['training'] == True:\n",
+    "\t\t\t\tconfig['mode'] = 'single_run'\n",
+    "\t\t\telse:\n",
+    "\t\t\t\tsys.exit(\"Ensure that training is True for ensemble mode. Use infer_ensemble.ipynb for inference.\")\n",
+    "\n",
+    "\t\tif config['mode'] == 'mcd' or config['mode'] == 'single_run': # MCD will do 10 inference on each of the 10 repetitions = 100 runs\n",
+    "\t\t\tif config['training_date'] == 'current': exp = 0\t\t\t\t\n",
+    "\t\t\telif config['training_date'] == 'earlier': exp = 1\n",
     "\telse:\n",
-    "\t\tdates = [2019, 2020]\n",
+    "\t\tif config['training_date'] == \"earlier\":\n",
+    "\t\t\tdates = [2018, 2019]\n",
+    "\t\telse:\n",
+    "\t\t\tdates = [2019, 2020]\n",
     "\n",
-    "\tdataset = MTMultipleDates(config = config,\n",
-    "\t\tdates = dates, # dates = [2016,2017,2018,2019]\n",
-    "\t\taddPastDeforestationInput = True,\n",
-    "\t\tborderBuffer = 2)\t\n",
-    "\tif config['mode'] == 'evidential':\t\n",
+    "\t\tdataset = MTMultipleDates(config = config,\n",
+    "\t\t\tdates = dates, # dates = [2016,2017,2018,2019]\n",
+    "\t\t\taddPastDeforestationInput = True,\n",
+    "\t\t\tborderBuffer = 2)\t\n",
     "\n",
-    "\t\t# MT\n",
-    "\t\t# exp_id_base = 196\n",
-    "\t\t# early date\n",
-    "\t\texp_id_base = 206\n",
-    "\t\t# early date inference\n",
-    "\t\texp_id_base = 210\n",
-    "\t\texp_id_base = 210 if config['training_date'] == 'earlier' else 206\n",
-    "\n",
-    "\telif config['mode'] == 'mcd' or config['mode'] == 'single_run':\n",
-    "\t\tif config['training_date'] == 'current': exp = 2\n",
-    "#\t\t\texp_ids = [108, 109, 110, 111, 112, 113, 114, 115, 116, 117]\n",
-    "\t\telif config['training_date'] == 'earlier': exp = 3\n",
-    "#\t\t\texp_ids = [130, 132, 133, 134, 135, 136, 137, 1125, 1124, 1123]\n",
-    "\n",
+    "\t\tif config['mode'] == 'mcd' or config['mode'] == 'single_run':\n",
+    "\t\t\tif config['training_date'] == 'current': exp = 2\n",
+    "\t\t\telif config['training_date'] == 'earlier': exp = 3\n",
+    "else:\n",
+    "\texp = 13\n",
     "ic(dates)\n",
     "\n",
     "\n",
-    "if issubclass(type(dataset), MultipleDates):\n",
-    "\tif config['mode'] == 'evidential':\n",
-    "\t\tpatchesHandler = PatchesHandlerEvidential(\n",
-    "\t\t\tdataset)\n",
-    "\telse:\n",
-    "\t\tpatchesHandler = PatchesHandlerMultipleDates(\n",
-    "\t\t\tdataset)\n",
-    "\t\t\n",
+    "if config['mode'] == 'evidential2':\n",
+    "\tpatchesHandler = PatchesHandlerEvidential2()\n",
     "else:\n",
-    "\tpatchesHandler = PatchesHandler()\n",
-    "\n"
+    "\tpatchesHandler = PatchesHandlerMultipleDates(\n",
+    "\t\tdataset)\n"
    ]
   },
   {
@@ -189,25 +165,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "if config['mode'] == 'evidential':\n",
-    "    config[\"inference_times\"] = 1\n",
-    "    config['Uncertainty']['annealing_step'] = 10*375\n",
-    "    config['evidence_function'] = evidential.relu_evidence\n",
-    "    manager_class = ManagerEvidential\n",
-    "    config['uncertainty_method'] = \"evidential\"\n",
-    "    config['classes_mode'] = None\n",
-    "    config['evidence_function']\n",
-    "\n",
-    "    repetition_n = 10\n",
-    "\n",
-    "    experiment_values = np.ones(repetition_n).astype(np.uint8)\n",
-    "\n",
-    "\n",
-    "    # experiment_values = [int(x) for x in experiment_values]\n",
-    "\n",
-    "    exp_ids = range(exp_id_base, exp_id_base+len(experiment_values))\n",
     "\n",
     "if config['mode'] == 'mcd':\n",
     "    config[\"inference_times\"] = 10\n",
@@ -220,7 +177,10 @@
     "    manager_class = ManagerSingleRun\n",
     "    config['uncertainty_method'] = \"pred_entropy_single\"\n",
     "    config['classes_mode'] = False\n",
-    "\n"
+    "\n",
+    "elif config['mode'] == 'evidential2':\n",
+    "    config['uncertainty_method'] = \"evidential2\"\n",
+    "    config['classes_mode'] = False"
    ]
   },
   {
@@ -230,14 +190,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[103, 104, 105, 106, 107, 118, 119, 120, 121, 122]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'exp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Jorge\\deforestation_uncertainty\\run_multiple_experiments.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Jorge/deforestation_uncertainty/run_multiple_experiments.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m exp\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'exp' is not defined"
+     ]
     }
    ],
    "source": [
@@ -254,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "55da0bd1",
    "metadata": {},
    "outputs": [],
@@ -294,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a13e82bc",
    "metadata": {},
    "outputs": [
@@ -346,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "597049da",
    "metadata": {},
    "outputs": [
@@ -379,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "5997b986",
    "metadata": {},
    "outputs": [
