--- a/run_multiple_experiments.ipynb
+++ b/run_multiple_experiments.ipynb
@@ -75,7 +75,7 @@
     "    \"inferring\": True,\n",
     "    \"site\" : 'PA',\n",
     "    \"training_date\": \"current\", # values: earlier, current\n",
-    "    \"mode\" : 'evidential2', # values: mcd, single_run, ensemble, evidential2\n",
+    "    \"mode\" : 'mcd', # values: mcd, single_run, ensemble, evidential2\n",
     "    \"training_times\": 10,\n",
     "    \"learning_rate\": 1e-4,\n",
     "    \"weights\": [0.1, 0.9, 0],\n",
