--- a/run_multiple_experiments.ipynb
+++ b/run_multiple_experiments.ipynb
@@ -70,22 +70,9 @@
    ],
    "source": [
     "\n",
-    "config = {\n",
-    "    \"training\": True,\n",
-    "    \"inferring\": True,\n",
-    "    \"site\" : 'PA',\n",
-    "    \"training_date\": \"current\", # values: earlier, current\n",
-    "    \"mode\" : 'mcd', # values: mcd, single_run, ensemble, evidential2\n",
-    "    \"training_times\": 10,\n",
-    "    \"learning_rate\": 1e-4,\n",
-    "    \"weights\": [0.1, 0.9, 0],\n",
-    "    \"save_probabilities\": False,\n",
-    "    \"loadInference\": False,\n",
-    "    \"addPastDeforestationInput\": True,\n",
-    "    \"Uncertainty\": {},\n",
-    "    \"uncertainty_method\": \"pred_entropy\", # values: pred_entropy, pred_variance, MI, KL, evidential2\n",
-    "    \"use_cloud_mask\": True\n",
-    "    }\n",
+    "with open('config.json', 'r') as f:\n",
+    "    config = json.load(f)\n",
+    "    \n",
     "print(\"Mode: {}. Site: {}. Training: {}. Training date: {}\".format(\n",
     "    config['mode'], config['site'], config['training'], config['training_date']))\n",
     "print(config)\n"
